--- a/src/views/sampleVoucher.fxml
+++ b/src/views/sampleVoucher.fxml
@@ -1,14 +1,223 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controllersAll.ControllerVoucher"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane minHeight="500.0" minWidth="900.0" stylesheets="/views/sample.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllersAll.ControllerVoucher">
+   <children>
+      <SplitPane dividerPositions="0.29797979797979796" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <VBox alignment="CENTER" minHeight="300.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <Label minWidth="0.0" text="Дата для оформления">
+                           <VBox.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </VBox.margin>
+                        </Label>
+                        <DatePicker fx:id="dateDate" minWidth="0.0">
+                           <VBox.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </VBox.margin>
+                        </DatePicker>
+                        <Label minWidth="40.0" text="Стоимость">
+                           <VBox.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </VBox.margin>
+                        </Label>
+                        <Label fx:id="labelCost" minWidth="40.0" text="0" textAlignment="CENTER">
+                           <VBox.margin>
+                              <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
+                           </VBox.margin></Label>
+                        <Label alignment="CENTER" minWidth="0.0" text="Наименование тура" textAlignment="CENTER" wrapText="true" />
+                        <Label fx:id="labelTourName" alignment="CENTER" minWidth="80.0" text="-" textAlignment="CENTER">
+                           <VBox.margin>
+                              <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
+                           </VBox.margin>
+                        </Label>
+                        <Label minWidth="40.0" text="Заказчик" textAlignment="CENTER" />
+                        <Label fx:id="labelCustomer" minWidth="30.0" text="-" textAlignment="CENTER" wrapText="true">
+                           <VBox.margin>
+                              <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
+                           </VBox.margin>
+                        </Label>
+                        <Label minWidth="80.0" text="Оформитель" />
+                        <Label fx:id="labelEmployee" minWidth="70.0" text="-">
+                           <VBox.margin>
+                              <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
+                           </VBox.margin>
+                        </Label>
+                     </children>
+                     <padding>
+                        <Insets top="15.0" />
+                     </padding>
+                  </VBox>
+                  <VBox alignment="CENTER" minHeight="130.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                     <children>
+                        <Button minWidth="100.0" mnemonicParsing="false" onAction="#onAdd" text="Добавить">
+                           <VBox.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Button minWidth="100.0" mnemonicParsing="false" onAction="#onEdit" text="Редактировоать">
+                           <VBox.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Button minWidth="100.0" mnemonicParsing="false" onAction="#onDelete" text="Удалить">
+                           <VBox.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </VBox.margin>
+                        </Button>
+                     </children>
+                  </VBox>
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <TabPane prefHeight="398.4" prefWidth="417.6" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <tabs>
+                      <Tab text="Туристы по путевке">
+                        <content>
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <HBox alignment="CENTER_LEFT" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                       <children>
+                                          <Label maxWidth="50.0" minWidth="50.0" text="Фамилия">
+                                             <HBox.margin>
+                                                <Insets bottom="5.0" left="5.0" right="5.0" top="10.0" />
+                                             </HBox.margin>
+                                          </Label>
+                                          <TextField fx:id="textTouristSurname" maxWidth="150.0" minWidth="150.0">
+                                             <HBox.margin>
+                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                             </HBox.margin>
+                                          </TextField>
+                                          <Label maxWidth="150.0" minWidth="50.0" text="Серия и номер паспорта">
+                                             <HBox.margin>
+                                                <Insets bottom="5.0" left="5.0" right="5.0" top="10.0" />
+                                             </HBox.margin>
+                                          </Label>
+                                          <TextField fx:id="textTouristPassport" maxWidth="150.0" minWidth="150.0">
+                                             <HBox.margin>
+                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                             </HBox.margin>
+                                          </TextField>
+                                          <Button maxWidth="100.0" minWidth="100.0" mnemonicParsing="false" onAction="#onTouristSearch" text="Найти килентов">
+                                             <HBox.margin>
+                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                             </HBox.margin>
+                                          </Button>
+                                       </children>
+                                    </HBox>
+                                    <TableView fx:id="tableTourist" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
+                                       <columns>
+                                          <TableColumn fx:id="columnTouristSurname" prefWidth="75.0" text="Фамилия" />
+                                          <TableColumn fx:id="columnTouristName" prefWidth="75.0" text="Имя" />
+                                          <TableColumn fx:id="columnTouristPatronymic" prefWidth="75.0" text="Отчество" />
+                                          <TableColumn fx:id="columnTouristPassport" prefWidth="75.0" text="серия и номер паспорта" />
+                                          <TableColumn fx:id="columnTouristSex" prefWidth="75.0" text="пол" />
+                                          <TableColumn fx:id="columnTouristBirthDate" prefWidth="75.0" text="дата рождения" />
+                                          <TableColumn fx:id="columnTouristPhone" prefWidth="75.0" text="номер телефона" />
+                                          <TableColumn fx:id="columnTouristEmail" prefWidth="75.0" text="e-mail" />
+                                       </columns>
+                                       <columnResizePolicy>
+                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                       </columnResizePolicy>
+                                       <contextMenu>
+                                          <ContextMenu>
+                                            <items>
+                                              <MenuItem mnemonicParsing="false" onAction="#onTouristMenuDelete" text="Удалить туриста" />
+                                            </items>
+                                          </ContextMenu>
+                                       </contextMenu>
+                                    </TableView>
+                                 </children>
+                              </AnchorPane>
+                        </content>
+                      </Tab>
+                      <Tab text="Список клиентов компании">
+                        <content>
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <HBox alignment="CENTER_LEFT" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                       <children>
+                                          <Label maxWidth="50.0" minWidth="50.0" text="Фамилия">
+                                             <HBox.margin>
+                                                <Insets bottom="5.0" left="5.0" right="5.0" top="10.0" />
+                                             </HBox.margin>
+                                          </Label>
+                                          <TextField fx:id="textClientSurname" maxWidth="150.0" minWidth="150.0">
+                                             <HBox.margin>
+                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                             </HBox.margin>
+                                          </TextField>
+                                          <Label maxWidth="150.0" minWidth="50.0" text="Серия и номер паспорта">
+                                             <HBox.margin>
+                                                <Insets bottom="5.0" left="5.0" right="5.0" top="10.0" />
+                                             </HBox.margin>
+                                          </Label>
+                                          <TextField fx:id="textClientPassport" maxWidth="150.0" minWidth="150.0">
+                                             <HBox.margin>
+                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                             </HBox.margin>
+                                          </TextField>
+                                          <Button maxWidth="100.0" minWidth="100.0" mnemonicParsing="false" onAction="#onClientSearch" text="Найти килентов">
+                                             <HBox.margin>
+                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                             </HBox.margin>
+                                          </Button>
+                                       </children>
+                                    </HBox>
+                                    <TableView fx:id="tableClients" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
+                                       <columns>
+                                          <TableColumn fx:id="columnClientSurname" prefWidth="75.0" text="Фамилия" />
+                                          <TableColumn fx:id="columnClientName" prefWidth="75.0" text="Имя" />
+                                          <TableColumn fx:id="columnClientPatronymic" prefWidth="75.0" text="Отчество" />
+                                          <TableColumn fx:id="columnClientPassport" prefWidth="75.0" text="серия и номер паспорта" />
+                                          <TableColumn fx:id="columnClientSex" prefWidth="75.0" text="пол" />
+                                          <TableColumn fx:id="columnClientBirthDate" prefWidth="75.0" text="дата рождения" />
+                                          <TableColumn fx:id="columnClientPhone" prefWidth="75.0" text="номер телефона" />
+                                          <TableColumn fx:id="columnClientEmail" prefWidth="75.0" text="e-mail" />
+                                       </columns>
+                                       <columnResizePolicy>
+                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                       </columnResizePolicy>
+                                       <contextMenu>
+                                          <ContextMenu>
+                                            <items>
+                                              <MenuItem mnemonicParsing="false" onAction="#onClientMenuAddAsCustomer" text="Указать как заказчика" />
+                                                <MenuItem mnemonicParsing="false" onAction="#onClientMenuAddAsTourist" text="Добавить как туриста" />
+                                            </items>
+                                          </ContextMenu>
+                                       </contextMenu>
+                                    </TableView>
+                                 </children>
+                              </AnchorPane>
+                        </content>
+                      </Tab>
+                    </tabs>
+                  </TabPane>
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
+   </children>
+   <padding>
+      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+   </padding>
 </AnchorPane>
